# OpenSubdiv-Model-Fitting

./: .gitignore  LICENSE  README.md
SymPy/: thinplate.py
src/: BezierPatch.cpp  BezierPatch.h  CMakeLists.txt  FPJParser.cpp  FPJParser.h  Logger.cpp  Logger.h  MeshTopology.cpp  MeshTopology.h  PLYParser.cpp  PLYParser.h  RigidTransform.cpp  RigidTransform.h  SubdivEvaluator.cpp  SubdivEvaluator.h  eigen_extras.h  eigen_pull_request_fitellipse.cpp  eigen_pull_request_test.cpp  fit-subdiv-to-3d-points.cpp  fit_subdiv_jacobian_test.cpp  fit_subdiv_to_3d_points.cpp  icp_align_3d_points.cpp  log3d.cpp  log3d.h  qr_banded_blocked_test.cpp  qr_banded_general_test.cpp  qr_banded_test.cpp  qr_diagonalization_test.cpp  qr_solver_test.cpp
src/Eigen_ext/: BlockDiagonalSparseQR_Ext.h  BlockSparseQR_Ext.h  SparseBandedBlockedQR_Ext.h  SparseBandedBlockedQR_Ext2.h  SparseBandedBlockedQR_Ext3.h  SparseBandedBlockedQR_General.h  SparseBandedBlockedQR_General_nnz.h  SparseBandedQR_Ext.h  SparseBandedQR_Ext2.h  SparseBlockCOO.h  SparseBlockCOO_nnz.h  SparseQR_Ext.h  SparseSubblockQR_Ext.h  SuiteSparseQRSupport_Ext.h
src/Eigen_pull/: BandedBlockedSparseQR.h  BlockAngularSparseQR.h  BlockDiagonalSparseQR.h  SparseBandedBlockedQR.h  SparseBlockAngularQR.h  SparseBlockCOO.h  eigen_extras.h
src/Eigen_pull/LevenbergMarquardt/: LMcovar.h  LMonestep.h  LMpar.h  LMqrsolv.h  LevenbergMarquardt.h
src/Optimization/: BaseFunctor.cpp  BaseFunctor.h  ICPFunctor.cpp  ICPFunctor.h  PosAndNormalsFunctor.cpp  PosAndNormalsFunctor.h  PosAndNormalsWithRegFunctor.cpp  PosAndNormalsWithRegFunctor.h  PosNormRegFunctor.cpp  PosNormRegFunctor.h  PosOnlyFunctor.cpp  PosOnlyFunctor.h  PosOnlyWithRegFunctor.cpp  PosOnlyWithRegFunctor.h
